<resources>
	<string name="app_name">Beacon</string>
	<string name="button_start">Start</string>
	<string name="button_stop">Stop</string>
	<string name="watching_started_caption">Watching started</string>
	<string name="watching_finished_caption">Not watching</string>
	<string name="no_member_name_caption">Account is not defined</string>
	<string name="avatar_image_descriptor">Avatar</string>
	<string name="server_host_caption">Host</string>
	<string name="server_port_caption">Port</string>
	<string name="crew_name_caption">Family</string>
	<string name="member_name_caption">Name</string>
	<string name="password_caption">Password</string>
	<string name="server_settings_caption">Server</string>
	<string name="user_settings_caption">Account</string>
	<string name="start_beeping_notify_caption">Start watching</string>
	<string name="start_beeping_notify_summary">Notify start watching</string>
	<string name="start_beeping_ringtone_caption">Start ringtone</string>
	<string name="stop_beeping_notify_caption">Stop watching</string>
	<string name="stop_beeping_notify_summary">Notify stop watching</string>
	<string name="stop_beeping_ringtone_caption">Stop ringtone</string>
	<string name="action_settings_caption">Settings</string>
	<string name="action_permissions_caption">Permissions</string>
	<string name="permission_tracking_caption">Tracking</string>
	<string name="permission_recording_caption">Recording</string>
	<string name="action_watchers_caption">Watchers</string>
	<string name="server_settings_pref_key" translatable="false">pref_server_hostport_key</string>
	<string name="text_host_summary" translatable="false">%1$s:%1$d</string>
	<string name="text_default_host" translatable="false">xenohead.no-ip.org</string>
	<string name="text_default_port" translatable="false">7682</string>
	<string name="user_settings_pref_key" translatable="false">pref_user_logon_key</string>
	<string name="text_user_summary" translatable="false">%1$s.%1$d</string>
	<string name="server_host_preference_key" translatable="false">pref_server_host_key</string>
	<string name="server_port_preference_key" translatable="false">pref_server_port_key</string>
	<string name="crew_name_preference_key" translatable="false">pref_crew_name_key</string>
	<string name="member_name_preference_key" translatable="false">pref_member_name_key</string>
	<string name="member_password_preference_key" translatable="false">pref_member_password_key</string>
	<string name="start_beeping_notify_preference_key" translatable="false">pref_start_beeping_notify_key</string>
	<string name="stop_beeping_notify_preference_key" translatable="false">pref_stop_beeping_notify_key</string>
	<string name="start_beeping_ringtone_preference_key" translatable="false">pref_start_beeping_ringtone_key</string>
	<string name="stop_beeping_ringtone_preference_key" translatable="false">pref_stop_beeping_ringtone_key</string>
</resources>
