<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblCrewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crew_name_caption"/>

    <EditText
        android:id="@+id/edtCrewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lblMemberName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_name_caption"/>

    <EditText
        android:id="@+id/edtMemberName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_caption"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

</LinearLayout>