<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              tools:context=".MainActivity"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:baselineAligned="false"
              android:background="#dddddd">

	<ToggleButton
		android:id="@+id/buttonStart"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10sp"
		android:textOn="@string/button_stop"
		android:textOff="@string/button_start"
		android:textSize="20sp"
		android:textStyle="bold"
		android:textColor="@color/text_color"
		android:gravity="start|center_vertical"
		android:drawableStart="@drawable/service_state_control"
		android:drawableLeft="@drawable/service_state_control"
		android:drawableEnd="@drawable/beacon_off"
		android:drawableRight="@drawable/beacon_off"
		android:checked="false"
		android:background="@drawable/button_background"
		android:onClick="startButtonPressed"/>

	<TextView
		android:id="@+id/txvMember"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:text="@string/no_member_name_caption"
		android:textColor="@color/not_authorized_color"
		android:textSize="20sp"
		android:textStyle="bold"
		android:gravity="center"
		android:drawableTop="@drawable/no_member_avatar"/>

</LinearLayout>
